# SWELancer-Benchmark

./: .gitignore  Dockerfile  Dockerfile_new  Dockerfile_x86  LICENSE.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_swelancer.py  sample.env  swelancer.py  swelancer_agent.py  swelancer_tasks_lite.csv
.github/workflows/: ci.yml
issues/1/: commit_id.txt  flow.mitm  issue_data.json  revert_command.txt  test.py
issues/10/: commit_id.txt  flow.mitm  issue_data.json  revert_command.txt  test.py  user_tool.py
issues/100/: commit_id.txt  flow.mitm  issue_data.json  issue_introduction.patch  revert_command.txt  test.py  user_tool.py
issues/101/: commit_id.txt  flow.mitm  issue_data.json  revert_command.txt  test.py  user_tool.py
issues/102/: revert_command.txt  user_tool.py
issues/103/: commit_id.txt  flow.mitm  revert_command.txt  test.py  user_tool.py
issues/104/: commit_id.txt  flow.mitm  issue_data.json  test.py
issues/105/: commit_id.txt  flow.mitm  issue_data.json  revert_command.txt  test.py
issues/106/: revert_command.txt  user_tool.py
issues/107/: commit_id.txt  test.py  user_tool.py
issues/108/: flow.mitm  revert_command.txt  test.py
issues/109/: commit_id.txt  flow.mitm  issue_data.json  test.py  (+2 more)
runtime_scripts/: npm_fix.py  pusher_nginx.conf  replay.py  rewrite_test.py  run.sh  run_broken_state.yml  run_fixed_state.yml  run_test.yml  run_user_tool.yml  setup_eval.yml  setup_expensify.yml  setup_mitmproxy.yml
utils/: browser.py  check_flows.py  download_videos.py  email_handler.py  login.py  trace_cleaner.py
(+2298 files in other folders)
